[package]
name = "cnctd_ai"
version = "0.1.2"
edition = "2024"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "AI and LLM utilities"
repository = "https://github.com/Connected-Dot/cnctd_server"
license = "MIT"
keywords = ["module"]

[dependencies]
anthropic-sdk = "0.1.5"
async-openai = "0.29.3"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
